# RedEye-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Jenkinsfile-Build  Jenkinsfile-PS_Benchmark  LICENSE  NOTICE  README.md  Thumbs.db  UML.pptx  vcpkg.json
.github/workflows/: cleanup-caches.yml  cmake-multi-platform.yml  sonarcloud-engine.yml  sonarcloud-lens.yml  sonarcloud-library.yml  sonarcloud-main.yml  sonarcloud-template.yml  sonarcloud.yml
Engine3D/: Engine3D.sln
Engine3D/Engine3D/: Engine3D.vcxproj  Engine3D.vcxproj.filters
RedEye/: .gitignore  Profiling Analysis.twb  RedEye.sln  RedEye.sln - Shortcut.lnk
RedEye Projects Explorer/: JR_Input.cpp  JR_Window.cpp  JR_WindowAndRenderer.cpp  JR_WindowAndRenderer.h  JR_WindowsManager.cpp  JR_WindowsManager.h  RedEye Projects Explorer.vcxproj  RedEye Projects Explorer.vcxproj.filters  main.cpp
RedEye/BuildData/: .gitignore
RedEye/DebugData/: Red Eye Profiling.json  imgui.ini
RedEye/Engine/: AboutWindow.cpp  AboutWindow.h  Application.cpp  Application.h  AssetsWindow.cpp  AssetsWindow.h  ConfigWindow.cpp  ConfigWindow.h  ConsoleWindow.cpp  ConsoleWindow.h  EditorWindow.h  Engine.rc  Engine.vcxproj  Engine.vcxproj.filters  Event.cpp  Event.h  EventListener.h  GameWindow.cpp  GameWindow.h  General Diagram.cd  HierarchyWindow.cpp  HierarchyWindow.h  MaterialEditorWindow.cpp  MaterialEditorWindow.h  ModuleAudio.cpp  ModuleAudio.h  ModuleEditor.cpp  ModuleEditor.h  ModuleInput.cpp  ModuleInput.h  ModulePhysics.cpp  ModulePhysics.h  ModuleRenderer3D.cpp  ModuleRenderer3D.h  ModuleScene.cpp  ModuleScene.h  ModuleWindow.cpp  ModuleWindow.h  ParticleEmitterEditorWindow.cpp  ParticleEmitterEditorWindow.h  (+174 more)
RedEye/EngineResources/: config.json
RedEye/Profiling/: Engine Profiling.twb  General Profiling Analysis.twb  Particle Debug Profiling.twb  Particle Physics Profiling.twb  Particle Release Profiling.twb
RedEye/RedEye Installer/: RedEye Installer x64.vdproj  RedEye Installer.vdproj
RedEye/RedLens/: JR_Application.cpp  JR_Application.h  JR_Input.h  JR_Window.h  JR_WindowAndRenderer.cpp  JR_WindowsManager.cpp  RL_FileSystem.cpp  RL_Projects.cpp  RL_Projects.h  RedLens.rc  RedLens.vcxproj  RedLens.vcxproj.filters  main.cpp
RedEye/ReleaseData/: Particles Red Eye Profiling.json  imgui.ini
RedEye/Source/: AABBDynamicTree.cpp  AABBDynamicTree.h  AboutWindow.cpp  Application.cpp  Application.h  AssetsWindow.cpp  Config.cpp  Config.h  ConfigWindow.cpp  ConfigWindow.h  ConsoleWindow.cpp  ConsoleWindow.h  Cvar.cpp  Cvar.h  EditorWindow.h  EditorWindows.cpp  EditorWindows.h  Event.cpp  Event.h  EventListener.h  FileSystem.cpp  FileSystem.h  GameWindow.cpp  GameWindow.h  General Diagram.cd  Globals.cpp  Globals.h  HierarchyWindow.cpp  JSONNode.cpp  JSONNode.h  MaterialEditorWindow.cpp  MaterialEditorWindow.h  MeshManager.cpp  MeshManager.h  ModelHandleErrors.cpp  ModelHandleErrors.h  ModelImporter.cpp  ModelImporter.h  Modelmporter.cpp  Modelmporter.h  (+198 more)
RedEye_old/: RedEye.sln
RedEye_old/BuildLib/: .gitignore
RedEye_old/Engine/: Application.cpp  AssetsWindow.cpp  ConsoleWindow.h  Engine.rc  Engine.vcxproj  Event.h  HierarchyWindow.cpp  HierarchyWindow.h  ModuleEditor.h  ModuleWindow.h  ParticleEmitterEditorWindow.h  PlayPauseWindow.h  RE_CompPrimitive.h  RE_CompTransform.cpp  RE_ComponentPool.h  RE_ComponentsPool.cpp  RE_Config.cpp  RE_ECS_Importer.h  RE_EmissionExternalForces.h  RE_EmissionSpawn.cpp  RE_GameObjectPool.h  RE_Material.h  RE_ModelImporter.h  RE_PR_Light.cpp  RE_ParticleEmitterBase.h  RE_PrimitiveManager.cpp  RE_QuadTree.cpp  RE_TextureImporter.cpp  RE_Timer.h  WaterPlaneWindow.cpp  main.cpp
RedEye_old/Profiling/: Particle Physics Profiling.twb  Particle Rendering Profiling.twb
RedEye_old/RedEye Installer/: RedEye Installer x64.vdproj
RedEye_old/RedLens/: JR_Application.cpp  JR_Input.cpp  JR_Window.h  JR_WindowsManager.h  RCa34600  RL_FileSystem.h  RL_Projects.cpp  RL_Projects.h  RedLens.rc  RedLens.vcxproj.filters  resource.h
docs/: .htaccess  404.html  CNAME  config.yml  index.html  readme.md  robots.txt  site.webmanifest  sitemap.xml  style.css
docs/Engine-Guts/: index.html
docs/Styles/: custom_accordion.css  custom_accordion.css.map  custom_accordion.scss  custom_main.css
docs/The-Brains/: index.html
docs/The-Entrails/: index.html
docs/The-Team/: index.html
docs/Whats-Next/: index.html
docs/code-sample/: index.html
docs/readme/: index.html
docs/sample1/: index.html
docs/sample2/: index.html
docs/sample3/: index.html
docs/scss/: custom_accordion.css
docs/sjcl/: index.html
source/: CMakeLists.txt
source/Engine/: CMakeLists.txt  RE_Application.cpp  RE_Application.h  RE_Render.cpp  RE_Render.h  main.cpp
source/Engine_old/: Application.h  AssetsWindow.h  ConfigWindow.cpp  Event.cpp  MaterialEditorWindow.cpp  ModuleInput.cpp  ModuleInput.h  ModulePhysics.cpp  ModulePhysics.h  ModuleScene.h  ParticleEmitterEditorWindow.cpp  PopUpWindow.cpp  PopUpWindow.h  PropertiesWindow.cpp  RE_Command.cpp  RE_Command.h  RE_CommandManager.cpp  RE_CompCamera.cpp  RE_CompCamera.h  RE_CompLight.cpp  RE_CompParticleEmitter.h  RE_CompPrimitive.cpp  RE_Component.h  RE_Config.h  RE_ConsoleLog.cpp  RE_Curve.h  RE_DataTypes.h  RE_ECS_Pool.cpp  RE_EmissionBoundary.h  RE_EmissionCollider.h  RE_EmissionExternalForces.cpp  RE_EmissionInterval.cpp  RE_EmissionVector.cpp  RE_EmissionVector.h  RE_FBOManager.cpp  RE_FileSystem.cpp  RE_FileSystem.h  RE_GLCache.cpp  RE_GLCache.h  RE_Hardware.h  (+25 more)
source/Lens/: CMakeLists.txt  RL_Application.cpp  RL_Application.h  RL_FileSystem.cpp  RL_FileSystem.h  RL_Input.cpp  RL_Input.h  RL_Projects.cpp  RL_Projects.h  RL_Window.cpp  RL_Window.h  RL_Window.ixx  RL_WindowAndRenderer.cpp  RL_WindowAndRenderer.h  RL_WindowsManager.cpp  RL_WindowsManager.ixx  main.cpp
source/Modules/: CMakeLists.txt  RE_Dialogs.ixx  RE_EventSystem.ixx  RE_FileSystem.ixx  RE_GUI.ixx  RE_GUIManager.ixx  RE_JSON.ixx  RE_WindowManager.ixx  RE_WindowsManager.ixx  RL_FileSystem.ixx
source/Modules/Render/: OpenGL.ixx  RenderAPIHandler.ixx  Vulkan.ixx
tests/: CMakeLists.txt
(+369 files in other folders)
